ghc/compiler/tests/typecheck/should_fail/tcfail048.hs

class (B a) => C a where
 op1 :: a -> a
